# stepper

./: .gitignore  pyproject.toml
board/: stepper.py
doc/: project.md
esp/: esp32-c3.yaml
esp_stepper/: __init__.py
gui/: app.py
gui/.nicegui/: storage-general.json
